less features from psl

--- a/psl/Cargo.toml
+++ b/psl/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 flate2 = "*"
 log = "*"
 once_cell = "*"
-publicsuffix = "*"
+publicsuffix = { version = "*", default-features = false }
