--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2018"
 [features]
 default = [
     "tokio",
-    # "async-std",
+#    "async-std",
     "gzip",
     "tls"
 ]
@@ -35,6 +35,7 @@ tls = [
 [dependencies]
 bytes = "0.5"
 cookie = { version = "0.13", features = ["percent-encode"] }
+flate2 = "*"
 futures-io = { version = "0.3" }
 futures-util = { version = "0.3", features = ["io"] }
 h2 = "0.2"
@@ -45,12 +46,9 @@ once_cell = "1"
 qstring = "0.7"
 async-trait = "0.1"
 encoding_rs = "0.8"
+publicsuffix = { version = "*", default-features = false }
 serde = { version = "1", default-features = false }
 serde_json = { version = "1", default-features = false }
-# We always need tokio asyncwrite/asyncread traits because h2 uses them.
-tokio-traits = { path = "./tokio-traits" }
-# Public suffix list compiled into the source
-psl = { path = "./psl" }
 # keep in sync with time brought in by cookie
 time = "=0.2.9"
 
@@ -58,6 +56,7 @@ time = "=0.2.9"
 async-std-lib = { package = "async-std", version = "1", optional = true }
 
 ## tokio
+tokio-read-write-traits = "0.2"
 tokio-lib = { package = "tokio", version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }
 
 ## gzip
