--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tls = [
     "webpki",
     "webpki-roots",
 ]
+test-topsites = []
 
 [dependencies]
 bytes = "0.5"
@@ -68,6 +69,8 @@ webpki = { version = "0.21", optional = true }
 webpki-roots = { version = "0.19", optional = true }
 
 [dev-dependencies]
+pretty_env_logger = "0.4"
+env_logger = "0.7"
 serde_derive = "1"
 tide = "0.6"
 async-std-lib = { package = "async-std", version = "*", features = ["unstable"] }
