--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,9 +9,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --features async-std
-    - name: Run tests async-std
-      run: cargo test --features async-std
-    - name: Run tests tokio
+    - name: Run tests
       run: cargo test
