--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,10 @@ all-features = true
 [features]
 default = [
     "tokio",
-    # "smol",
     # "async-std",
     "gzip",
-    "tls"
-]
-smol = [
-    "smol-lib"
+    "tls",
+    # "server"
 ]
 async-std = [
     "async-std-lib",
@@ -41,6 +38,11 @@ tls = [
 ]
 test-topsites = []
 fuzz = []
+server = [
+    "regex",
+    "futures-core",
+    "async-channel"
+]
 
 [dependencies]
 bytes = "0.5"
@@ -48,8 +50,10 @@ cookie = { version = "0.14", default-features = false, features = ["percent-enco
 flate2 = "1"
 futures-io = { version = "0.3", default-features = false, features = ["std"] }
 futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io"] }
+hreq-h1 = { version = "*", path = "../hreq-h1" }
 hreq-h2 = { version = "0.2.5" }
 http = "0.2"
+httpdate = "0.3.2"
 httparse = "1"
 log = "0.4"
 once_cell = "1"
@@ -62,9 +66,6 @@ serde_json = { version = "1", default-features = false }
 # keep in sync with time brought in by cookie
 time = "=0.2.16"
 
-## smol
-smol-lib = { package="smol", version = "0.1", optional = true }
-
 ## async-std
 async-std-lib = { package = "async-std", version = "1", optional = true }
 
@@ -75,15 +76,17 @@ tokio-lib = { package = "tokio", version = "0.2", default-features = false, feat
 async-compression = { version = "0.3", default-features = false, features = ["gzip", "futures-bufread"], optional = true }
 
 ## tls
-rustls = { version = "0.17.0", default-features = false, features = [], optional = true }
+rustls = { version = "0.18.0", default-features = false, features = [], optional = true }
 webpki = { version = "0.21", optional = true }
 webpki-roots = { version = "0.20", optional = true }
+
+## server
+regex = { version = "1", default-features = false, features = ["std", "unicode"], optional = true }
+futures-core = { version = "0.3", default-features = false, features = ["std"], optional = true }
+async-channel = { version = "1", optional = true }
 
 [dev-dependencies]
 pretty_env_logger = "0.4"
 env_logger = "0.7"
 serde_derive = "1"
-tide = "0.6"
-async-std-lib = { package = "async-std", version = "1", features = ["unstable"] }
-paste = "0.1"
 rand = "0.7"
