--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: cargo test --features server
+      run: TEST_LOG=1 cargo test --features server
