--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,8 @@ encoding_rs = "0.8"
 flate2 = "1"
 futures-io = { version = "0.3", default-features = false, features = ["std"] }
 futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io"] }
-hreq-h1 = { path = "../hreq-h1" }
-hreq-h2 = { path = "../hreq-h2" }
+hreq-h1 = { version = "0.2" }
+hreq-h2 = { version = "0.2.6" }
 http = "0.2"
 httparse = "1"
 httpdate = "0.3.2"
