--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,8 +62,7 @@ publicsuffix = { default-features = false, version = "1.5.4" }
 qstring = "0.7"
 serde = { version = "1", default-features = false }
 serde_json = { version = "1", default-features = false }
-tracing = "0.1"
-tracing-futures = "0.2"
+log = "0.4"
 
 # keep in sync with time brought in by cookie
 time = "=0.2.16"
@@ -88,6 +87,7 @@ futures-core = { version = "0.3", default-features = false, features = ["std"], 
 async-channel = { version = "1", optional = true }
 
 [dev-dependencies]
-tracing-subscriber = "0.2"
 serde_derive = "1"
 rand = "0.7"
+env_logger = "0.7"
+pretty_env_logger = "0.4"
