--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,10 +8,22 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        runtime:
+          - tokio
+          - async-std
+        server:
+          - ""
+          - "server"
         feature:
-          - ''
+          - ""
           - gzip
           - tls
+        what:
+          - "--doc"
+          - "--tests"
+        exclude:
+          - server: ""
+            what: "--tests"
     env:
       RUST_BACKTRACE: "1"
     steps:
@@ -21,13 +33,8 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - name: Test tokio
+      - name: Test
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --no-default-features --features "tokio server ${{ matrix.feature }}"
-      - name: Test async-std
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --no-default-features --features "async-std server ${{ matrix.feature }}"
+          args: ${{ matrix.what }} --no-default-features --features "${{ matrix.runtime }} ${{ matrix.server }} ${{ matrix.feature }}"
