--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,8 @@ default = [
     "tls",
     "server"
 ]
-async-std = [
-    "async-std-lib",
-]
-tokio = [
-    "tokio-lib",
-]
+# tokio
+# async-std
 gzip = [
     "async-compression",
 ]
@@ -68,10 +64,10 @@ chardetng = "0.1"
 time = "=0.2.16"
 
 ## async-std
-async-std-lib = { package = "async-std", version = "1", optional = true }
+async-std = { version = "1", optional = true }
 
 ## tokio
-tokio-lib = { package = "tokio", version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }
+tokio = { version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }
 
 ## gzip
 async-compression = { version = "0.3", default-features = false, features = ["gzip", "futures-bufread"], optional = true }
@@ -90,3 +86,4 @@ serde_derive = "1"
 rand = "0.7"
 env_logger = "0.7"
 pretty_env_logger = "0.4"
+tokio = { package = "tokio", version = "0.2", default-features = false, features = ["full"] }
