--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,7 @@ jobs:
       matrix:
         runtime:
           - tokio
+          - smol
           # - async-std
         server:
           - ""
