--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ all-features = true
 [features]
 default = [
     "tokio",
+#    "smol",
 #    "async-std",
     "gzip",
     "tls",
@@ -68,6 +69,9 @@ async-std = { version = "1", optional = true }
 
 ## tokio
 tokio = { version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns", "time", "fs"], optional = true }
+
+## smol
+smol = { version = "*", optional = true }
 
 ## gzip
 async-compression = { version = "0.3", default-features = false, features = ["gzip", "futures-bufread"], optional = true }
