--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ mime_guess = "2"
 chardetng = "0.1"
 
 # keep in sync with time brought in by cookie
-time = "=0.2.16"
+time = "0.2"
 
 ## async-std
 async-std = { version = "1", optional = true }
