--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,6 @@ futures-core = { version = "0.3", default-features = false, features = ["std"], 
 [dev-dependencies]
 serde_derive = "1"
 rand = "0.7"
-env_logger = "0.8"
+env_logger = "0.7" # 0.7 needed for pretty_env_logger 0.4
 pretty_env_logger = "0.4"
 tokio = { package = "tokio", version = "0.2", default-features = false, features = ["full"] }
