--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ flate2 = "1"
 futures-io = { version = "0.3", default-features = false, features = ["std"] }
 futures-util = { version = "0.3", default-features = false, features = ["async-await-macro", "io"] }
 hreq-h1 = { version = "0.3.8" }
-hreq-h2 = { version = "0.2.6-v2" }
+hreq-h2 = { version = "0.2.7" }
 http = "0.2"
 httparse = "1"
 httpdate = "0.3.2"
