run just async-std

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         runtime:
-          - tokio
-          # - async-std
+          # - tokio
+          - async-std
         server:
           - ""
           - "server"
