--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,9 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        runtime:
-          - tokio
-          # - async-std
         server:
           - ""
           - "server"
@@ -38,4 +35,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
-          args: ${{ matrix.what }} --no-default-features --features "${{ matrix.runtime }} ${{ matrix.server }} ${{ matrix.feature }}"
+          args: ${{ matrix.what }} --no-default-features --features ${{ matrix.server }} ${{ matrix.feature }}"
