Avoid empty feature in test matrix

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,6 +21,8 @@ jobs:
         exclude:
           - server: ""
             what: "--tests"
+          - server: ""
+            feature: ""
     env:
       RUST_BACKTRACE: "1"
       RUSTFLAGS: "-D dead_code -D unused-variables -D unused"
